--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -39,7 +39,7 @@
     }
     &__logo {
       margin-bottom: 0em;
-      margin-right: 18.5em;
+      margin-right: 25vw;
     }
     &__background {
       justify-content: flex-start;
@@ -51,17 +51,17 @@
   .footer {
     justify-content: flex-start;
     &__data {
-      justify-content: flex-start;
+      justify-content: space-between;
       margin-bottom: 2.5em;
       padding-top: 2.5em;
     }
     &__logo {
       margin-bottom: 0em;
-      margin-right: 22.5em;
+      margin-right: 35vw;
     }
     &__background {
       justify-content: flex-start;
-      padding: 1.4em 12em;
+      padding: 1.4em 20em;
     }
   }
 }
@@ -109,7 +109,7 @@
     margin-bottom: 0em;
     &__phone {
       margin-bottom: 0em;
-      padding-right: 1.2em;
+      padding-right: 1em;
       font-size: 1.25em;
       border-right: 0.1em solid getColor('primary-gray');
       &::before {
