--- a/src/sass/_howWeDo.scss
+++ b/src/sass/_howWeDo.scss
@@ -85,7 +85,7 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: flex-start;
-      gap: 1.675em;
+      gap: 1.2em;
     }
     &__item {
       justify-content: flex-start;
