--- a/src/sass/_program.scss
+++ b/src/sass/_program.scss
@@ -220,7 +220,7 @@
         background-image: url(../images/program_picture_clipped_desktop.png);
         width: 759px;
         height: 502px;
-        bottom: -14em;
+        bottom: -12em;
         left: 0;
       }
     }
