--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     //height: 553px;
-    height: 50vh;
+    height: 75vh;
     width: 100%;
     margin-bottom: 1em;
   }
